hphp/test/slow/parser/async_bad_if.php.expectf

Fatal error: A class member, method, type, trait usage, trait require, xhp attribute, xhp use, or xhp category is expected here. in %s/async_bad_if.php on line 3
